# api_template

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: cd.yml
backend/: pyproject.toml
